--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1282,9 +1282,11 @@ canvas {
   position: relative;
   overflow: visible;
   border: 9px solid transparent;
+  /*
   background-clip: content-box;
-  border-image: url(images/shadow.png) 9 9 repeat;
   background-color: white;
+  */
+  border-image: url(images/shadow.png) 9 9 repeat;
 }
 
 .annotLink > a:hover {
